plugins {
    id 'java'
    id 'org.springframework.boot' version '3.1.3'
    id 'io.spring.dependency-management' version '1.1.3'
}

group = 'com.jetbrains.marcocodes'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

ext['hibernate.version'] = '6.3.0.CR1'
ext['h2.version'] = '2.1.210'

repositories {
    mavenLocal()
    mavenCentral()
    maven { url 'https://repo.spring.io/milestone' }
    maven { url 'https://repo.spring.io/snapshot' }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    // https://mvnrepository.com/artifact/com.h2database/h2
    runtimeOnly group: 'com.h2database', name: 'h2'
    annotationProcessor 'org.hibernate.orm:hibernate-jpamodelgen'
// https://mvnrepository.com/artifact/io.github.classgraph/classgraph
    testImplementation group: 'io.github.classgraph', name: 'classgraph', version: '4.8.162'

// https://mvnrepository.com/artifact/org.assertj/assertj-core
    testImplementation group: 'org.assertj', name: 'assertj-core', version: '3.24.2'

    implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310'

    // https://mvnrepository.com/artifact/com.drewnoakes/metadata-extractor
    implementation group: 'com.drewnoakes', name: 'metadata-extractor', version: '2.18.0'

    // https://mvnrepository.com/artifact/com.google.guava/guava
    implementation group: 'com.google.guava', name: 'guava', version: '32.1.2-jre'


}

tasks.named('test') {
    useJUnitPlatform()
}
